run_spec(__dirname, ["php"], { endOfLine: "cr" });
run_spec(__dirname, ["php"], { endOfLine: "crlf" });
run_spec(__dirname, ["php"], { endOfLine: "lf" });
